--- a/app/src/scss/components/profile/_profile.scss
+++ b/app/src/scss/components/profile/_profile.scss
@@ -110,7 +110,7 @@
             border: 1px solid $white-grey;
             box-sizing: border-box;
             border-radius: 10px;
-            padding: 0 30px 0 30px;
+            padding: 0 15px 0 15px;
             margin-bottom: 50px;
 
             & p {
@@ -119,9 +119,12 @@
                 font-size: 18px;
                 font-weight: 400;
                 color: $black;
+                text-align: center;
             }
         }
     }
+
+
 
     /* SECTION UNPAID */
 
@@ -457,8 +460,9 @@
     }
 }
 
-@media (max-width: 361px) {
+@media (max-width: 400px) {
     .profile__competition_place p {
         font-size: 16px;
+        text-align: left;
     }
 }
